GNOME Bugzilla – Bug 670745
A bunch of Gst* objects are leaked
Last modified: 2018-05-22 15:22:35 UTC
- Start a call - Close the call and its window A bunch of Gst* objects survives and so are leaked: - 0x23a0870, GstProxyPad: 1 refs - 0x23b8080, GstPad: 1 refs - 0x23b8200, GstPad: 1 refs - 0x263e120, GstPadTemplate: 2 refs - 0x23b8380, GstPad: 1 refs - 0x2be7b80, GstPadTemplate: 1 refs - 0x23b8500, GstPad: 1 refs - 0x27c8af0, GstPadTemplate: 1 refs - 0x23b8680, GstPad: 1 refs - 0x23503a0, GstPadTemplate: 3 refs - 0x2305e00, GstPadTemplate: 3 refs - 0x23b8800, GstPad: 1 refs - 0x2bee830, GstPad: 1 refs - 0x22916b0, GstPad: 1 refs - 0x23b8980, GstPad: 1 refs - 0x23b8b00, GstPad: 1 refs - 0x263e1b0, GstPadTemplate: 2 refs - 0x2305a10, GstPadTemplate: 3 refs - 0x22919b0, GstPad: 1 refs - 0x23b8c80, GstPad: 2 refs - 0x2bf1000, GstGhostPad: 1 refs - 0x2291b30, GstPad: 1 refs - 0x263e5a0, GstPadTemplate: 2 refs - 0x2350430, GstPadTemplate: 3 refs - 0x2291cb0, GstPad: 1 refs - 0x2305e90, GstPadTemplate: 2 refs - 0x2291e30, GstPad: 2 refs - 0x229d540, GstSystemClock: 3 refs - 0x2bee6b0, GstPad: 2 refs - 0x2291830, GstPad: 1 refs - 0x2350040, GstPadTemplate: 3 refs - 0x22bb380, GstGhostPad: 1 refs - 0x2305aa0, GstPadTemplate: 3 refs - 0x263e240, GstPadTemplate: 2 refs - 0x23504c0, GstPadTemplate: 3 refs - 0x2305f20, GstPadTemplate: 5 refs - 0x27c8820, GstPadTemplate: 2 refs - 0x23500d0, GstPadTemplate: 3 refs - 0x263e2d0, GstPadTemplate: 2 refs - 0x2305b30, GstPadTemplate: 5 refs - 0x2394930, GstCapsFilter: 2 refs - 0x27c77c0, GstPad: 2 refs - 0x27c8c10, GstPadTemplate: 2 refs - 0x27c7940, GstPad: 2 refs - 0x22bba80, GstGhostPad: 2 refs - 0x2350550, GstPadTemplate: 3 refs - 0x27c7dc0, GstPad: 1 refs - 0x21be970, GstAudioClock: 1 refs - 0x27c7ac0, GstPad: 1 refs - 0x2be5090, GstPad: 1 refs - 0x2350160, GstPadTemplate: 2 refs - 0x263e360, GstPadTemplate: 2 refs - 0x2305bc0, GstPadTemplate: 2 refs - 0x2be5390, GstPad: 2 refs - 0x2340950, GstValve: 2 refs - 0x23505e0, GstPadTemplate: 3 refs - 0x2be5210, GstPad: 1 refs - 0x27c8b80, GstPadTemplate: 1 refs - 0x27c8940, GstPadTemplate: 2 refs - 0x2305c50, GstPadTemplate: 3 refs - 0x27c88b0, GstPadTemplate: 3 refs - 0x27c7c40, GstPad: 1 refs - 0x22bb1c0, GstGhostPad: 2 refs - 0x27c89d0, GstPadTemplate: 1 refs - 0x263e480, GstPadTemplate: 3 refs - 0x21d2c10, GstProxyPad: 1 refs - 0x263e090, GstPadTemplate: 2 refs - 0x27c8dc0, GstPadTemplate: 2 refs - 0x23a0bd0, GstProxyPad: 1 refs - 0x22bbc40, GstGhostPad: 1 refs - 0x23a0000, GstProxyPad: 1 refs - 0x27c8a60, GstPadTemplate: 1 refs - 0x2350310, GstPadTemplate: 3 refs - 0x263e510, GstPadTemplate: 2 refs - 0x23a06c0, GstProxyPad: 1 refs
Created attachment 208349 [details] [review] audio-sink: fix GstPad leaks gst_ghost_pad_new() doesn't take ownership of the target pad so we have to unref it ourself.
The above patch doesn't really improve the situation but should be correct if I understand Gst's API correctly.
*** Bug 670744 has been marked as a duplicate of this bug. ***
Created attachment 208353 [details] [review] empathy_call_window_content_added_cb: fix pad leak
both patches are ++
Attachment 208349 [details] pushed as ed191ca - audio-sink: fix GstPad leaks Attachment 208353 [details] pushed as c9e47d4 - empathy_call_window_content_added_cb: fix pad leak
Thanks merged. I keep this bug open as all objects are not destroyed yet.
Created attachment 208597 [details] [review] audio-sink: don't unref subpad Part of my commit ed191caba6658b580db78a1802f2c8293e4564fb was wrong. subpad is added to the bin so gst_element_add_pad() takes its reference.
Comment on attachment 208597 [details] [review] audio-sink: don't unref subpad Attachment 208597 [details] pushed as 8b11603 - audio-sink: don't unref subpad
Here is the new list with those fixes: - 0x30d6f00, GstPadTemplate: 2 refs - 0x2d211c0, GstPadTemplate: 2 refs - 0x2d6c3d0, GstPadTemplate: 2 refs - 0x2d215b0, GstPadTemplate: 2 refs - 0x306b650, GstPadTemplate: 2 refs - 0x7ffb780b4ab0, GstPadTemplate: 2 refs - 0x7ffb780b4ea0, GstPadTemplate: 2 refs - 0x3631450, GstPadTemplate: 2 refs - 0x2c488e0, GstPadTemplate: 2 refs - 0x30799e0, GstPadTemplate: 2 refs - 0x2c48cd0, GstPadTemplate: 2 refs - 0x3079dd0, GstPadTemplate: 2 refs - 0x351dd30, GstPadTemplate: 2 refs - 0x2d212e0, GstPadTemplate: 2 refs - 0x2d6c100, GstPadTemplate: 3 refs - 0x2d216d0, GstPadTemplate: 2 refs - 0x7ffb780b4bd0, GstPadTemplate: 2 refs - 0x2d6c4f0, GstPadTemplate: 2 refs - 0x30d6960, GstPadTemplate: 2 refs - 0x2c48a00, GstPadTemplate: 2 refs - 0x3079b00, GstPadTemplate: 2 refs - 0x3079ef0, GstPadTemplate: 2 refs - 0x351de50, GstPadTemplate: 2 refs - 0x2d21400, GstPadTemplate: 2 refs - 0x2d6c610, GstPadTemplate: 2 refs - 0x7ffb780b4cf0, GstPadTemplate: 2 refs - 0x35062f0, GstPadTemplate: 2 refs - 0x3079830, GstPadTemplate: 2 refs - 0x2c48b20, GstPadTemplate: 2 refs - 0x30d6a80, GstPadTemplate: 2 refs - 0x2d6c340, GstPadTemplate: 2 refs - 0x7ffb780b4a20, GstPadTemplate: 2 refs - 0x7ffb780b4e10, GstPadTemplate: 2 refs - 0x36313c0, GstPadTemplate: 2 refs - 0x2c48850, GstPadTemplate: 2 refs - 0x30d6ba0, GstPadTemplate: 2 refs - 0x2c48c40, GstPadTemplate: 2 refs - 0x3079d40, GstPadTemplate: 2 refs - 0x2d6c070, GstPadTemplate: 2 refs - 0x2d21250, GstPadTemplate: 2 refs - 0x2d6c460, GstPadTemplate: 2 refs - 0x2d21640, GstPadTemplate: 2 refs - 0x306b6e0, GstPadTemplate: 2 refs - 0x7ffb780b4b40, GstPadTemplate: 2 refs - 0x3079950, GstPadTemplate: 2 refs - 0x2c48970, GstPadTemplate: 2 refs - 0x3079a70, GstPadTemplate: 2 refs - 0x2c48d60, GstPadTemplate: 2 refs - 0x351ddc0, GstPadTemplate: 2 refs - 0x2d6c190, GstPadTemplate: 2 refs - 0x2d21370, GstPadTemplate: 2 refs - 0x2cab600, GstPad: 1 refs - 0x2d6c580, GstPadTemplate: 2 refs - 0x2cb7540, GstSystemClock: 1 refs - 0x30d69f0, GstPadTemplate: 2 refs - 0x2c48a90, GstPadTemplate: 2 refs - 0x3079b90, GstPadTemplate: 2 refs - 0x351dee0, GstPadTemplate: 2 refs - 0x7ffb780b4990, GstPadTemplate: 2 refs - 0x306b530, GstPadTemplate: 2 refs - 0x7ffb780b4d80, GstPadTemplate: 2 refs - 0x3506380, GstPadTemplate: 2 refs - 0x30d6b10, GstPadTemplate: 2 refs - 0x2c48bb0, GstPadTemplate: 2 refs - 0x30798c0, GstPadTemplate: 2 refs
Created attachment 209167 [details] [review] video-widget: don't set priv->sink_pad twice The first value was never used and overrided a few lines below.
Attachment 209167 [details] pushed as 1dc974b - video-widget: don't set priv->sink_pad twice
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/empathy/issues/503.