audio-sink: fix GstPad leaks

gst_ghost_pad_new() doesn't take ownership of the target pad so we have to
unref it ourself.

https://bugzilla.gnome.org/show_bug.cgi?id=670745